objects/copado__Promotion__c.object
<CustomObject>
    <description>This object tracks the changes that are promoted to the next Salesforce instance.</description>
    <fields>
        <fullName>Migration_Id__c</fullName>
        <externalId>true</externalId>
        <label>Migration Id</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copado__Back_Promotion__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checked if the promotion is from a higher environment to a lower environment in the deployment flow.</description>
        <label>Back Promotion</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>copado__Create_Full_Permission_Sets_Step__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Select if you wish to move added permission sets to a Full Permission Sets deployment step.  This will remove them from the Metadata deployment step.</inlineHelpText>
        <label>Create Full Permission Sets Step</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>copado__Create_Full_Profiles_Step__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Select if you wish to move added profiles to a Full Profiles deployment step.  This will remove them from the Metadata deployment step.</inlineHelpText>
        <label>Create Full Profiles Step</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>copado__Destination_Environment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Destination Environment</label>
        <referenceTo>copado__Environment__c</referenceTo>
        <relationshipLabel>Promotions (Destination Environment)</relationshipLabel>
        <relationshipName>Promotions1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>copado__Destination_Org_Credential__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The credential to the Destination Environment that should be used when creating a deployment. This may be auto-populated, if left blank, based on the project&apos;s deployment flow if you are the owner of an Org Credential to the Destination Environment.</inlineHelpText>
        <label>Destination Org Credential</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>copado__Org__c.copado__Environment__c</field>
                <operation>equals</operation>
                <valueField>$Source.copado__Destination_Environment__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>copado__Org__c</referenceTo>
        <relationshipLabel>Promotions (Destination Org Credential)</relationshipLabel>
        <relationshipName>Promotions2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>copado__Exclude_From_Auto_Resolve__c</fullName>
        <description>Conflicts found in the selected metadata types are not auto-resolved by Copado when merging feature branches into the promotion branch. The conflicts can be manually resolved using Copado.</description>
        <inlineHelpText>Conflicts found in the selected metadata types are not auto-resolved by Copado when merging feature branches into the promotion branch. The conflicts can be manually resolved using Copado.</inlineHelpText>
        <label>Exclude From Auto Resolve</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>copado__Auto_Resolve_Exceptions</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>copado__Order_by__c</fullName>
        <inlineHelpText>Fill this field only if you want to change the selected user stories order on deployment. (usage exp: name asc, copado__backlog_rank__c desc)</inlineHelpText>
        <label>Order User Stories by</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copado__Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project</label>
        <referenceTo>copado__Project__c</referenceTo>
        <relationshipLabel>Promotions</relationshipLabel>
        <relationshipName>Promotions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>copado__Release__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field will provide the ability to deploy User Stories within a Release.</description>
        <label>Release</label>
        <referenceTo>copado__Release__c</referenceTo>
        <relationshipLabel>Promotions</relationshipLabel>
        <relationshipName>Promotions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>copado__Send_Deployment_Complete_email__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Send Deployment Complete email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>copado__Source_Environment__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Source Environment</label>
        <referenceTo>copado__Environment__c</referenceTo>
        <relationshipLabel>Promotions</relationshipLabel>
        <relationshipName>Promotions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>copado__Source_Org_Credential__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The credential to the Source Environment that should be used when creating a deployment. This may be auto-populated, if left blank, based on the project&apos;s deployment flow if you are the owner of an Org Credential to the Source Environment.</inlineHelpText>
        <label>Source Org Credential</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>copado__Org__c.copado__Environment__c</field>
                <operation>equals</operation>
                <valueField>$Source.copado__Source_Environment__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>copado__Org__c</referenceTo>
        <relationshipLabel>Promotions (Source Org Credential)</relationshipLabel>
        <relationshipName>Promotions1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>copado__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                    <default>true</default>
                    <label>Draft</label>
                </value>
                <value>
                    <fullName>Scheduled</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>test__c</fullName>
        <defaultValue>false</defaultValue>
        <label>test</label>
        <type>Checkbox</type>
    </fields>
    <label>Promotion</label>
    <listViews>
        <fullName>copado__All</fullName>
        <columns>NAME</columns>
        <columns>copado__Destination_Environment__c</columns>
        <columns>copado__Project__c</columns>
        <columns>copado__Release__c</columns>
        <columns>copado__Source_Environment__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>P{00000}</displayFormat>
        <label>Promotion Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Promotions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>copado__Scratch_Orgs_Disabled_for_Back_Promoting</fullName>
        <active>true</active>
        <errorConditionFormula>AND(copado__Back_Promotion__c == true,ISPICKVAL(copado__Destination_Org_Credential__r.copado__Org_Type__c,&apos;Scratch Org&apos;))</errorConditionFormula>
        <errorMessage>Back Promotions to Scratch Orgs are not allowed</errorMessage>
    </validationRules>
</CustomObject>